--- a/index.html
+++ b/index.html
@@ -5,10 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css\style.css">
     <script src="js\app.js"></script>
-    <title>Document</title>
+    <title>Memória do Valente</title>
 </head>
 <body>
-    <div class=container>
+    <header>
+        <h1>Memória do Valente</h1>
+    </header>
+    <aside class="sidebar">
+        <h1>PONTOS</h1>
+
+    </aside>    
+    <div class="container-card">
 
     </div>
 </body>
