--- a/index.html
+++ b/index.html
@@ -13,7 +13,15 @@
     </header>
     <aside class="sidebar">
         <h1>PONTOS</h1>
-
+        <video width="320" height="240" controls>
+            <source src="mp4/movie.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>        
+        <div class="container-audiodescricao">
+            <audio controls id="audioplay">
+                <source src="mp3/Definição 1.mp3" type="audio/mpeg">
+            </audio>    
+        </div> 
     </aside>    
     <div class="container-card">
 
