ajuste habilitar e desabilitar audiodescricao e definição do nome do projeto

--- a/index.html
+++ b/index.html
@@ -5,23 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css\style.css">
     <script src="js\app.js"></script>
-    <title>Memória do Valente</title>
+    <title>Learn CAST</title>
 </head>
 <body>
     <header>
-        <h1>Memória do Valente</h1>
+        <h1>Learn CAST</h1>
     </header>
     <aside class="sidebar">
         <h1>PONTOS</h1>
         <video width="320" height="240" controls>
-            <source src="mp4/movie.mp4" type="video/mp4">
-            Your browser does not support the video tag.
+            <source src="" type="video/mp4">           
         </video>        
         <div class="container-audiodescricao">
             <audio controls id="audioplay">
-                <source src="mp3/Definição 1.mp3" type="audio/mpeg">
+                <source src="" type="audio/mpeg">
             </audio>    
         </div> 
+        <div class="container-settings">            
+            <label class="switch">
+                <input type="checkbox" id="enableAudioDescricao" checked>
+                <span class="slider round">Ativar audio descrição</span>
+            </label>  
+        </div>
     </aside>    
     <div class="container-card">
 
