--- a/index.html
+++ b/index.html
@@ -8,11 +8,10 @@
     <title>Learn CAST</title>
 </head>
 <body>
-    <header>
-        <h1>Learn CAST</h1>
+    <header class="o-header">
+        <h1 class="title">learnCAST</h1>
     </header>
-    <aside class="sidebar">
-        <h1>PONTOS</h1>
+    <aside class="o-aside">
         <video width="320" height="240" controls>
             <source src="" type="video/mp4">           
         </video>        
@@ -27,9 +26,15 @@
                 <span class="slider round">Ativar audio descrição</span>
             </label>  
         </div>
-    </aside>    
-    <div class="container-card">
+    </aside>
+    <main class="o-main">
+	
+	    <div class="container-card">
 
     </div>
+	
+	
+	</main>
+    <footer class="o-footer"></footer>  
 </body>
 </html>
